--- a/main.html
+++ b/main.html
@@ -23,6 +23,10 @@
     <span id="name">
       Rahul Srinivasan</span>
 
+    <div id="status">
+      I'm open to work!
+    </div>
+
     <div id="about">
       <div>About</div>
       <div>contact</div>
